src/main/resources/Krakatau-master/tests/assembler/bad/longstring.j
###preprocess###
.class public longSTRING
.super java/lang/Object

.const [1] = Utf8 '###range(32768,):\0###'
.end class
